apache_
 File "<ipython-input-1-7b3dd091ec55>", line 2
    RewriteEngine On
                  ^
SyntaxError: invalid syntax
